--- a/olive/gui/resources/resources.qrc
+++ b/olive/gui/resources/resources.qrc
@@ -1,11 +1,12 @@
 <RCC>
-  <qresource prefix="acquisition_control">
-    <file alias="stop">icons/stop.svg</file>
-    <file alias="pause">icons/pause.svg</file>
-  </qresource>
   <qresource prefix="main_window">
-    <file alias="problems">icons/report_problem.svg</file>
-    <file alias="channel_manager">icons/color_lens.svg</file>
-    <file alias="device_hub">icons/device_hub.svg</file>
+    <file alias="protocol_editor">icons/menu_open.png</file>
+    <file alias="acquisition">icons/camera.png</file>
+    <file alias="exit">icons/exit_to_app.png</file>
+    <file alias="problems">icons/report_problem.png</file>
+    <file alias="device_hub">icons/device_hub.png</file>
+  </qresource>
+  <qresource prefix="acquisition">
+    <file alias="2d">icons/crop_din.png</file>
   </qresource>
 </RCC>
