Reorganize to include MVP interface and wire up portal signals

--- a/olive/gui/backend/qt/mainwindow/view.ui
+++ b/olive/gui/backend/qt/mainwindow/view.ui
@@ -57,7 +57,7 @@
           <string>Device Hub</string>
          </property>
          <property name="icon">
-          <iconset resource="resources/resources.qrc">
+          <iconset resource="../resources/resources.qrc">
            <normaloff>:/main_window/device_hub</normaloff>:/main_window/device_hub</iconset>
          </property>
          <property name="iconSize">
@@ -87,7 +87,7 @@
 Editor</string>
          </property>
          <property name="icon">
-          <iconset resource="resources/resources.qrc">
+          <iconset resource="../resources/resources.qrc">
            <normaloff>:/main_window/protocol_editor</normaloff>:/main_window/protocol_editor</iconset>
          </property>
          <property name="iconSize">
@@ -116,7 +116,7 @@ Editor</string>
           <string>Acquisition</string>
          </property>
          <property name="icon">
-          <iconset resource="resources/resources.qrc">
+          <iconset resource="../resources/resources.qrc">
            <normaloff>:/main_window/acquisition</normaloff>:/main_window/acquisition</iconset>
          </property>
          <property name="iconSize">
@@ -158,7 +158,7 @@ Editor</string>
           <string>Problems</string>
          </property>
          <property name="icon">
-          <iconset resource="resources/resources.qrc">
+          <iconset resource="../resources/resources.qrc">
            <normaloff>:/main_window/problems</normaloff>:/main_window/problems</iconset>
          </property>
          <property name="iconSize">
@@ -187,7 +187,7 @@ Editor</string>
           <string>Exit</string>
          </property>
          <property name="icon">
-          <iconset resource="resources/resources.qrc">
+          <iconset resource="../resources/resources.qrc">
            <normaloff>:/main_window/exit</normaloff>:/main_window/exit</iconset>
          </property>
          <property name="iconSize">
@@ -222,7 +222,7 @@ Editor</string>
   </widget>
  </widget>
  <resources>
-  <include location="resources/resources.qrc"/>
+  <include location="../resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
