--- a/olive/gui/backend/qt/mainwindow/view.ui
+++ b/olive/gui/backend/qt/mainwindow/view.ui
@@ -23,7 +23,7 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="central_widget_layout">
+   <layout class="QHBoxLayout" name="horizontalLayout">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -41,9 +41,6 @@
     </property>
     <item>
      <widget class="QFrame" name="portal">
-      <property name="lineWidth">
-       <number>0</number>
-      </property>
       <layout class="QVBoxLayout" name="portal_buttons_layout">
        <item>
         <widget class="QToolButton" name="device_hub">
