Fix stacked widget and ui init

--- a/olive/gui/backend/qt/devicehub/view.ui
+++ b/olive/gui/backend/qt/devicehub/view.ui
@@ -6,17 +6,65 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>870</width>
+    <width>1115</width>
     <height>792</height>
    </rect>
   </property>
+  <property name="windowTitle">
+   <string>Device Hub</string>
+  </property>
   <layout class="QGridLayout" name="device_hub_main">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
+   <property name="spacing">
+    <number>0</number>
+   </property>
    <item row="0" column="0">
     <widget class="QSplitter" name="splitter">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
+     <property name="opaqueResize">
+      <bool>false</bool>
+     </property>
+     <property name="handleWidth">
+      <number>0</number>
+     </property>
+     <property name="childrenCollapsible">
+      <bool>false</bool>
+     </property>
      <widget class="QTreeWidget" name="devices">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>480</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::NoFrame</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Plain</enum>
+      </property>
+      <property name="lineWidth">
+       <number>0</number>
+      </property>
       <attribute name="headerVisible">
        <bool>true</bool>
       </attribute>
@@ -46,7 +94,14 @@
        </property>
       </item>
      </widget>
-     <widget class="QWidget" name="parameters" native="true"/>
+     <widget class="QWidget" name="parameters" native="true">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+        <horstretch>1</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+     </widget>
     </widget>
    </item>
   </layout>
