--- a/olive/gui/backend/qt/mainwindow/view.ui
+++ b/olive/gui/backend/qt/mainwindow/view.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>608</width>
-    <height>560</height>
+    <width>516</width>
+    <height>536</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QHBoxLayout" name="horizontalLayout">
+   <layout class="QHBoxLayout" name="mainwindow_layout">
     <property name="spacing">
      <number>0</number>
     </property>
@@ -42,6 +42,18 @@
     <item>
      <widget class="QFrame" name="portal">
       <layout class="QVBoxLayout" name="portal_buttons_layout">
+       <property name="leftMargin">
+        <number>3</number>
+       </property>
+       <property name="topMargin">
+        <number>3</number>
+       </property>
+       <property name="rightMargin">
+        <number>3</number>
+       </property>
+       <property name="bottomMargin">
+        <number>3</number>
+       </property>
        <item>
         <widget class="QToolButton" name="device_hub">
          <property name="sizePolicy">
@@ -211,6 +223,9 @@ Editor</string>
         <horstretch>1</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
+      </property>
+      <property name="lineWidth">
+       <number>0</number>
       </property>
      </widget>
     </item>
