--- a/olive/gui/backend/qt/resources/resources.qrc
+++ b/olive/gui/backend/qt/resources/resources.qrc
@@ -6,7 +6,22 @@
     <file alias="problems">icons/report_problem.png</file>
     <file alias="device_hub">icons/device_hub.png</file>
   </qresource>
+  <qresource prefix="protocol_editor">
+    <file alias="refresh">icons/refresh.png</file>
+    <file alias="edit">icons/create.png</file>
+    <file alias="tile_activate">icons/type_tile_activate.png</file>
+    <file alias="tile_deactivate">icons/type_tile_deactivate.png</file>
+    <file alias="open">icons/folder_open.png</file>
+    <file alias="remove">icons/chevron_left.png</file>
+    <file alias="add">icons/chevron_right.png</file>
+    <file alias="save">icons/save.png</file>
+    <file alias="duplicate">icons/queue.png</file>
+    <file alias="create">icons/add_box.png</file>
+  </qresource>
   <qresource prefix="acquisition">
+    <file alias="add">icons/add_circle_outline.png</file>
+    <file alias="stop">icons/stop.png</file>
+    <file alias="pause">icons/pause.png</file>
     <file alias="2d">icons/crop_din.png</file>
   </qresource>
 </RCC>
